<resources>
    <string name="app_name">Filler</string>

    <!--    HOMEPAGE-->
    <string name="homepage_header">Homepage</string>
    <string name="homepage_sub_header">Welcome to Filler !</string>
    <string name="homepageHelpButton">Help</string>
    <string name="homepageNewGameButton">New Game</string>
    <string name="homepageQuitButton">Quit</string>
    <string name="homepageBackgroundDesc">Background image for the homepage screen</string>

    <!--    HELP-->
    <string name="help_header">Help</string>
    <string name="help_sub_header">How to play Filler</string>
    <string name="help_rules">
        <![CDATA[
            <p>
                <br>
                <b>Rules:</b> <br>

                1. Each player is assigned a corner at the beginning of the game. <br>
                2. Players take turns filling their tiles with one of 6 colors in an attempt to capture adjacent tiles of the same color. <br>
                3. You cannot change the color to yours or your opponent\'s. <br>
                4. The game ends when there are no tiles left to capture. <br>
            </p>
            <p>
                <br>
                <b>Goal:</b> <br>

                The goal of the game is to capture more tiles than your opponent, then you win. <br>
            </p>
        ]]>
    </string>
    <string name="help_sample_image_desc">Game sample image</string>
    <string name="help_back_desc">Back to main page image</string>
    <string name="help_background_desc">Background image for the help screen</string>

    <!--    CONFIGURATION-->
    <string name="configuration_header">Configuration</string>
    <string name="configuration_sub_header">Choose your game settings</string>
    <string name="configuration_username">Enter your username</string>
    <string name="configuration_username_hint">Enter your username here....</string>
    <string name="configuration_colors">Pick the number of colors in the game</string>
    <string name="configuration_grid">Pick the board dimension</string>
    <string name="configuration_time">Choose if you want time control</string>
    <string name="configuration_difficulty_choose">Choose the game difficulty</string>
    <string name="configuration_difficulty_easy">Easy</string>
    <string name="configuration_difficulty_medium">Medium</string>
    <string name="configuration_difficulty_hard">Hard</string>
    <string name="startNewGameButton">Start new game</string>
    <string name="conf_background_desc">Background image for the configuration screen</string>

    <string name="color_image_description">Color roulette</string>
    <string name="board_image_description">Board icon</string>
    <string name="clock_image_description">Clock icon</string>


    <!--    GAME-->
    <string name="game_header">Game</string>
    <string name="game_sub_header">Have fun!</string>
    <string name="game_user_profile_image_description">Username profile picture</string>
    <string name="game_username_default">Username will go here</string>
    <string name="game_ia_profile_image_description">AI profile picture</string>
    <string name="game_ia_default">AI</string>
    <string name="game_timer_default">00:00</string>
    <string name="game_selector_choice_desc">Represents a choice of image for the user</string>


    <!--    RESULTS-->
    <string name="results_win_header">You\'ve won!</string>
    <string name="results_lose_header">You\'re a looser!</string>
    <string name="results_draw_header">It\'s a draw!</string>
    <string name="results_time">Date and time</string>
    <string name="results_default_time">Time will go here…</string>
    <string name="results_cal_desc">Calendar icon</string>
    <string name="results_log">Log</string>
    <string name="results_default_log">Log will go here…</string>
    <string name="results_log_desc">Log icon</string>
    <string name="results_email">E-mail</string>
    <string name="results_hint_email">johndoe@gmail.com</string>
    <string name="results_button_send">Send e-mail</string>
    <string name="results_button_new">New game</string>
    <string name="results_button_close">Close</string>
    <string name="results_outcome_win">Crown icon, indicating the user has won</string>
    <string name="results_outcome_lose">Looser icon, indicating the user has lost</string>
    <string name="results_outcome_draw">Two swords icon, indicating the user has drawn</string>

    <!--    FIXME: Remove this, stub functionalities-->
    <!--    Stub-->
    <string name="stub_log">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Accumsan sit amet nulla facilisi morbi. Volutpat blandit aliquam etiam erat velit scelerisque in dictum non. Fermentum iaculis eu non diam phasellus vestibulum. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Et leo duis ut diam quam. Condimentum mattis pellentesque id nibh tortor id. Dui faucibus in ornare quam viverra. Felis donec et odio pellentesque diam volutpat commodo. Neque egestas congue quisque egestas diam. Quam viverra orci sagittis eu volutpat odio facilisis mauris sit. Lectus vestibulum mattis ullamcorper velit sed ullamcorper morbi. Magna ac placerat vestibulum lectus mauris ultrices eros in. Enim ut sem viverra aliquet eget. Molestie at elementum eu facilisis sed odio. Leo urna molestie at elementum eu facilisis. Odio eu feugiat pretium nibh ipsum consequat nisl. Ac orci phasellus egestas tellus rutrum tellus.

Facilisis magna etiam tempor orci eu. Urna molestie at elementum eu facilisis sed. Magna fringilla urna porttitor rhoncus dolor. Amet dictum sit amet justo donec enim. Rhoncus mattis rhoncus urna neque viverra justo nec ultrices. Facilisis magna etiam tempor orci. Ullamcorper a lacus vestibulum sed arcu non odio. Orci phasellus egestas tellus rutrum. Odio morbi quis commodo odio aenean sed adipiscing diam. Nullam vehicula ipsum a arcu cursus vitae congue. Viverra orci sagittis eu volutpat. Posuere lorem ipsum dolor sit. Turpis egestas maecenas pharetra convallis posuere morbi leo urna molestie.

Fermentum dui faucibus in ornare quam viverra. Placerat vestibulum lectus mauris ultrices eros in. Malesuada fames ac turpis egestas integer eget aliquet nibh praesent. Donec enim diam vulputate ut pharetra sit. Quam vulputate dignissim suspendisse in est. Quisque sagittis purus sit amet volutpat consequat mauris nunc. Et netus et malesuada fames ac turpis. Dignissim diam quis enim lobortis. Ac auctor augue mauris augue neque gravida in fermentum. Viverra justo nec ultrices dui sapien. Augue interdum velit euismod in pellentesque. Scelerisque viverra mauris in aliquam sem fringilla. Nunc sed id semper risus in. Pretium nibh ipsum consequat nisl vel pretium lectus quam id. Purus in massa tempor nec. Venenatis lectus magna fringilla urna porttitor rhoncus. Facilisi nullam vehicula ipsum a arcu cursus. Volutpat maecenas volutpat blandit aliquam etiam erat velit scelerisque. Dolor purus non enim praesent elementum facilisis.

Sed adipiscing diam donec adipiscing tristique risus nec feugiat in. Quis hendrerit dolor magna eget est. Eget mauris pharetra et ultrices neque ornare. Risus at ultrices mi tempus imperdiet nulla malesuada pellentesque elit. Auctor urna nunc id cursus metus aliquam eleifend. Sit amet volutpat consequat mauris nunc. Accumsan tortor posuere ac ut consequat semper viverra nam libero. Augue eget arcu dictum varius duis at consectetur lorem donec. Rhoncus mattis rhoncus urna neque viverra justo nec ultrices dui. Neque vitae tempus quam pellentesque nec. Facilisis leo vel fringilla est ullamcorper. Cursus risus at ultrices mi tempus imperdiet nulla. Egestas fringilla phasellus faucibus scelerisque eleifend donec. Viverra accumsan in nisl nisi scelerisque. Tempor orci eu lobortis elementum. Venenatis urna cursus eget nunc. Quis auctor elit sed vulputate mi sit amet mauris commodo.

Lorem mollis aliquam ut porttitor. Sed turpis tincidunt id aliquet. Enim praesent elementum facilisis leo vel fringilla est. Amet luctus venenatis lectus magna fringilla urna. Nulla aliquet porttitor lacus luctus accumsan tortor. Id porta nibh venenatis cras sed felis. Ut lectus arcu bibendum at varius vel pharetra vel turpis. Enim lobortis scelerisque fermentum dui faucibus in ornare quam viverra. Erat imperdiet sed euismod nisi porta lorem. Amet nulla facilisi morbi tempus. Enim sed faucibus turpis in eu mi bibendum neque. Lacus sed turpis tincidunt id aliquet risus feugiat in. Egestas sed tempus urna et pharetra pharetra massa. Feugiat in ante metus dictum at tempor commodo ullamcorper.</string>
</resources>
